--- a/RMZDrv/RMZDrv.vcxproj.filters
+++ b/RMZDrv/RMZDrv.vcxproj.filters
@@ -30,9 +30,24 @@
     <ClInclude Include="..\RMZCommon\Common.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Util.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FlowContext.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Driver.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Util.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Common.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FlowContext.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
