--- a/RMZDrv/RMZDrv.vcxproj.filters
+++ b/RMZDrv/RMZDrv.vcxproj.filters
@@ -33,8 +33,11 @@
     <ClInclude Include="Util.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="NetBuffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="FlowContext.h">
-      <Filter>Source Files</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -48,6 +51,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="FlowContext.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="NetBuffer.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
