Start processing IRP requests Create .NET GUI application which interact with driver

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ bld/
 [Bb]in/
 [Oo]bj/
 Win7Debug/
+Win7 Debug/
 
 # Roslyn cache directories
 *.ide/
@@ -188,4 +189,3 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
-/Win7Debug
