--- a/RMZDrv/RMZDrv.vcxproj
+++ b/RMZDrv/RMZDrv.vcxproj
@@ -51,16 +51,16 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ConnectionContext.c" />
     <ClCompile Include="Driver.c" />
-    <ClCompile Include="FlowContext.c" />
     <ClCompile Include="Irp.c" />
     <ClCompile Include="NetBuffer.c" />
     <ClCompile Include="Util.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\RMZCommon\Common.h" />
+    <ClInclude Include="ConnectionContext.h" />
     <ClInclude Include="Driver.h" />
-    <ClInclude Include="FlowContext.h" />
     <ClInclude Include="Irp.h" />
     <ClInclude Include="NetBuffer.h" />
     <ClInclude Include="Util.h" />
