Implemented injection Implemented simple transparent data flow through user's app

--- a/RMZDrv/RMZDrv.vcxproj.filters
+++ b/RMZDrv/RMZDrv.vcxproj.filters
@@ -38,6 +38,12 @@
     <ClInclude Include="ConnectionContext.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BinaryReader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BinaryWriter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Driver.c">
@@ -53,6 +59,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ConnectionContext.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BinaryReader.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BinaryWriter.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
