--- a/RMZDrv/RMZDrv.vcxproj
+++ b/RMZDrv/RMZDrv.vcxproj
@@ -51,6 +51,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BinaryReader.c" />
+    <ClCompile Include="BinaryWriter.c" />
     <ClCompile Include="ConnectionContext.c" />
     <ClCompile Include="Driver.c" />
     <ClCompile Include="Irp.c" />
@@ -59,6 +61,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\RMZCommon\Common.h" />
+    <ClInclude Include="BinaryReader.h" />
+    <ClInclude Include="BinaryWriter.h" />
     <ClInclude Include="ConnectionContext.h" />
     <ClInclude Include="Driver.h" />
     <ClInclude Include="Irp.h" />
@@ -203,7 +207,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
     <DebuggerFlavor>DbgengKernelDebugger</DebuggerFlavor>
     <CodeAnalysisRuleSet>..\..\..\..\Program Files (x86)\Windows Kits\8.1\CodeAnalysis\DriverRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <RunCodeAnalysis>true</RunCodeAnalysis>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Release|x64'">
     <DebuggerFlavor>DbgengKernelDebugger</DebuggerFlavor>
@@ -312,7 +316,7 @@
     <ClCompile>
       <WppScanConfigurationData Condition="'%(ClCompile. ScanConfigurationData)'  == ''">
       </WppScanConfigurationData>
-      <EnablePREfast>true</EnablePREfast>
+      <EnablePREfast>false</EnablePREfast>
     </ClCompile>
     <Link>
       <AdditionalDependencies>Fwpkclnt.lib;Ndis.lib;%(AdditionalDependencies)</AdditionalDependencies>
